@@ -4,7 +4,7 @@
 # not continually reading --help!
 
 # Version of Kismet config
-version=2.9.1
+version=2.9.1a
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
@@ -190,6 +190,10 @@ dumptype=wiretap
 # Anything else = Max number of packets to log to a single file before closing
 # and opening a new one.
 dumplimit=0
+
+# Do we write data packets to a FIFO for an external data-IDS (such as Snort)?
+# See the docs before enabling this.
+#fifo=/tmp/kismet_dump
 
 # Default log title
 logdefault=Kismet
